# VMK_schedule_bot

./: .flake8  .gitignore  README.md  database.py  dodo.py  extract_tables.py  keyboards.py  pdf_parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
VMK_bot/: __main__.py  database.py  extract_tables.py  keyboards.py  messageUI.py  pdf_parser.py  server.py
VMK_bot/translation/en/LC_MESSAGES/: user.po
docs/source/: VMK_bot.rst  conf.py  index.rst  modules.rst
tests/: parser_tests.py
