[project]
name = "VMK_bot"
version = "0.0.1"
description = "Exam project for PythonDevelopment2023 course"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "COPYING" }
authors = [
    { name = "Ivanov Pavel", email = "ivanovp09@gmail.com" },
    { name = "Ivanov Pavel", email = "?@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["aiogram", "camelot-py", "opencv-python", "ghostscript"]

[build-system]
requires = ["Sphinx", "build", "coverage", "doit", "flake8", "pydocstyle", "pyfiglet", "setuptools", "pybabel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
VMK_bot = "VMK_bot"

[tool.setuptools.package-data]
VMK_bot = ["translation/en/LC_MESSAGES/user.mo"]
